Fix #11 Add ability to manage enabled hostnames from an option page

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -33,5 +33,13 @@
 
   "maskStatusOff": {
     "message": "The mask is off. I look like Firefox to this site."
+  },
+
+  "optionHostnamesListHeader": {
+    "message": "Enabled Hostnames"
+  },
+
+  "optionHostnamesListText": {
+    "message": "Your hostname list is empty."
   }
 }
